# signal

./: CMakeLists.txt  benchmark_signals.cpp  benchmark_signals.vcxproj  benchmark_signals_minimal.cpp  benchmark_signals_minimal.vcxproj  catch.hpp  conanfile.py  main.cpp  signal.vcxproj  signals.h  signals.vcxproj  signals_benchmark.cpp  signals_minimal.h  signals_minimal.vcxproj  signals_test.cpp  test_signals.cpp  test_signals_minimal.cpp
cmake/: signals2Config.cmake.in
include/signals/: signals.h
test/: CMakeLists.txt  main.cpp  signals_test.cpp
